--- a/PORT.KF5/FACTORIZE/muvee/icons/CMakeLists.txt
+++ b/PORT.KF5/FACTORIZE/muvee/icons/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-# Copyright (c) 2010-2014, Gilles Caulier, <caulier dot gilles at gmail dot com>
+# Copyright (c) 2010-2015, Gilles Caulier, <caulier dot gilles at gmail dot com>
 # Copyright (c) 2015, Alexander Potashev, <aspotashev@gmail.com>
 #
 # Redistribution and use is allowed according to the terms of the BSD license.
@@ -7,9 +7,9 @@
 
 ecm_install_icons(
     ICONS
-        16-apps-kipi-shwup.png
-        22-apps-kipi-shwup.png
-        32-apps-kipi-shwup.png
-        48-apps-kipi-shwup.png
+        16-apps-kipi-muvee.png
+        22-apps-kipi-muvee.png
+        32-apps-kipi-muvee.png
+        48-apps-kipi-muvee.png
     DESTINATION ${ICON_INSTALL_DIR}
 )
