--- a/PORT.KF5/FACTORIZE/muvee/kipiplugin_muvee.desktop.cmake.in
+++ b/PORT.KF5/FACTORIZE/muvee/kipiplugin_muvee.desktop.cmake.in
@@ -1,6 +1,6 @@
 [Desktop Entry]
-UntranslatedGenericName=Shwup Export
-Name=Shwup Export
+UntranslatedGenericName=Muvee Cloud Export
+Name=Muvee Export
 Name[ast]=Shwup Export
 Name[bg]=Изнасяне към Shwup
 Name[bs]=Shwup Izvoz
@@ -36,10 +36,10 @@ Name[sv]=Export till Shwup
 Name[th]=ส่งออกไปยังบริการ Shwup
 Name[tr]=Shwup Aktarımı
 Name[uk]=Експорт до Shwup
-Name[x-test]=xxShwup Exportxx
+Name[x-test]=xxMuvee Exportxx
 Name[zh_CN]=Shwup 导出
 Name[zh_TW]=Shwup 匯出
-Comment=A tool to export images to a remote Shwup web service
+Comment=A tool to export images to a remote Muvee Cloud web service
 Comment[ast]=Una ferramienta pa esportar imáxenes a un serviciu web remotu Shwup
 Comment[bg]=Инструмент за изнасяне на изображения към отдалечена уеб-услуга Shwup
 Comment[bs]=Alat za izvoz slika na udaljeni Shwup web servis
@@ -75,13 +75,13 @@ Comment[sv]=Ett verktyg för att exportera bilder till en Shwup fjärrwebbtjäns
 Comment[th]=เครื่องมือส่งออกภาพต่าง ๆ ไปยังเว็บบริการ Shwup
 Comment[tr]=Resimleri uzak bir Shwup web hizmetine aktarmak için bir araç
 Comment[uk]=Інструмент для експорту зображень до віддаленої служби Shwup
-Comment[x-test]=xxA tool to export images to a remote Shwup web servicexx
+Comment[x-test]=xxA tool to export images to a remote Muvee Cloud web servicexx
 Comment[zh_CN]=一个将图像导出到远程 Shwup 网络服务的工具
 Comment[zh_TW]=匯出影像到遠端 Shwup 網頁服務的工具
 Type=Service
 Icon=kipi-shwup
 ServiceTypes=KIPI/Plugin
-X-KDE-Library=kipiplugin_shwup
+X-KDE-Library=kipiplugin_muvee
 X-KIPI-PluginCategories=Export
 X-KIPI-BinaryVersion=${KIPI_LIB_SO_CUR_VERSION}
 author=Timothée Groleau, timothee at muvee dot com
