--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,9 +130,8 @@ if(KF5Kipi_FOUND)
     find_package(FLEX)                                                         # For Panorama (must be found before KdepimLibs for MacOS).
     find_package(BISON)                                                        # For Panorama (must be found before KdepimLibs for MacOS).
     find_package(Phonon4Qt5)                                                   # For AdvancedSlideShow.
-    find_package(QJSON)                                                        # For Facebook, and Imgur.
-
-#    find_package(QtKOAuth)                                                     # For Imgur Auhtenticated API
+    find_package(QJSON)                                                        # For Facebook.
+    find_package(QtKOAuth)                                                     # For Imgur Auhtenticated API
 #    find_package(Qca-qt5)                                                      # For Muvee.
 #    MACRO_OPTIONAL_FIND_PACKAGE(LibXml2)                                       # For Htmlexport.
 #    MACRO_OPTIONAL_FIND_PACKAGE(LibXslt)                                       # For Htmlexport.
@@ -225,9 +224,7 @@ if(KF5Kipi_FOUND)
     PRINT_COMPONENT_COMPILE_STATUS("Mediawiki"          KF5MediaWiki_FOUND)
     PRINT_COMPONENT_COMPILE_STATUS("AdvancedSlideshow"  BUILD_VIEWERS)
     PRINT_COMPONENT_COMPILE_STATUS("Calendar"           KF5CalendarCore_FOUND)
-    PRINT_COMPONENT_COMPILE_STATUS("Facebook"           QJSON_FOUND)
-    
-#    PRINT_COMPONENT_COMPILE_STATUS("Imgur"              QJSON_FOUND)
+    PRINT_COMPONENT_COMPILE_STATUS("Facebook"           QJSON_FOUND) 
 #    PRINT_COMPONENT_COMPILE_STATUS("Muvee"              Qca-qt5_FOUND)
 #    PRINT_COMPONENT_COMPILE_STATUS("VideoSlideshow"     ImageMagick_FOUND AND QTGSTREAMER_FOUND)
 #    PRINT_COMPONENT_COMPILE_STATUS("HtmlExport"         LIBXML2_FOUND AND LIBXSLT_FOUND)
@@ -348,6 +345,7 @@ if(KF5Kipi_FOUND)
         add_subdirectory(rajce)
         add_subdirectory(googleservices)
         add_subdirectory(dropbox)
+        add_subdirectory(imgur)
         
         if(KF5Vkontakte_FOUND)
             add_subdirectory(vkontakte)
@@ -371,7 +369,6 @@ if(KF5Kipi_FOUND)
 #
          if(QJSON_FOUND)
             add_subdirectory(facebook)
-#             add_subdirectory(imgur)
          endif()
 #
 #         # Currently the cmake module distributed w/ cmake uses a different variable
