--- a/googleservices/icons/CMakeLists.txt
+++ b/googleservices/icons/CMakeLists.txt
@@ -16,5 +16,6 @@ ecm_install_icons(
         32-apps-kipi-picasa.png
         48-apps-kipi-picasa.png
         sc-apps-kipi-picasa.svgz
+        process-working.png
     DESTINATION ${ICON_INSTALL_DIR}
 )
