Factorization of new album dialog of Flickr using KPNewAlbumDialog and some minor changes in dropbox DBAlbum.

--- a/flickr/CMakeLists.txt
+++ b/flickr/CMakeLists.txt
@@ -19,9 +19,8 @@ set(kipiplugin_flickr_PART_SRCS
     comboboxintermediate.cpp
     mpform.cpp
     selectuserdlg.cpp
+    newalbum.cpp
    )
-
-ki18n_wrap_ui(kipiplugin_flickr_PART_SRCS flickralbumdialog.ui)
 
 add_library(kipiplugin_flickr MODULE ${kipiplugin_flickr_PART_SRCS})
 
