--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,7 +97,10 @@ find_package(Qt5 ${REQUIRED_QT_VERSION} REQUIRED NO_MODULE COMPONENTS
 )
 
 find_package(KF5 REQUIRED COMPONENTS
+
              KDELibs4Support
+
+             WidgetsAddons
              Parts
              Wallet
              KHtml
