new option to turn ON/OFF pure Qt5 compilation

--- a/PORT.KF5/PENDING/htmlexport/CMakeLists.txt
+++ b/PORT.KF5/PENDING/htmlexport/CMakeLists.txt
@@ -36,15 +36,22 @@ target_link_libraries(kipiplugin_htmlexport
                       KF5::Kipi
                       KF5::KExiv2
                       KF5::KDcraw
+                      KF5::KIOCore
                       ${LIBXSLT_EXSLT_LIBRARIES}
                       ${LIBXSLT_LIBRARIES}
                       ${LIBXML2_LIBRARIES}
-                      KF5::KDELibs4Support
-                      KF5::KIOCore
                       Qt5::Core
                       Qt5::Gui
                       KF5kipiplugins
                      )
+
+
+if(NOT ENABLE_PUREQT5)
+    target_link_libraries(kipiplugin_htmlexport
+                          PUBLIC
+                          KF5::KDELibs4Support
+    )
+endif()
 
 include_directories(${LIBXSLT_INCLUDE_DIR}
                     ${LIBXML2_INCLUDE_DIR}
