--- a/geolocator/tests/simpletreemodel/CMakeLists.txt
+++ b/geolocator/tests/simpletreemodel/CMakeLists.txt
@@ -11,10 +11,16 @@ add_executable(gpssync_test_simpletreemodel
               )
 
 target_link_libraries(gpssync_test_simpletreemodel
-                      KF5::KDELibs4Support
                       Qt5::Test
                       Qt5::Gui
                       KF5kipiplugins
                      )
+
+if(NOT ENABLE_PUREQT5)
+    target_link_libraries(gpssync_test_simpletreemodel
+                          PUBLIC
+                          KF5::KDELibs4Support
+    )
+endif()
 
 add_test(gpssync_test_simpletreemodel ${EXECUTABLE_OUTPUT_PATH}/gpssync_test_simpletreemodel)
