--- a/tests/imageselector/CMakeLists.txt
+++ b/tests/imageselector/CMakeLists.txt
@@ -14,7 +14,6 @@ add_executable(imageselector ${imageselector_SRCS})
 target_link_libraries(imageselector
                       Qt5::Gui
                       Qt5::Core
-                      KF5::KDELibs4Support
 
                       ${KF5Kipi_LIBRARIES}
                       ${KF5KExiv2_LIBRARIES}
@@ -22,3 +21,10 @@ target_link_libraries(imageselector
 
                       KF5kipiplugins
 )
+
+if(NOT ENABLE_PUREQT5)
+    target_link_libraries(imageselector
+                          PUBLIC
+                          KF5::KDELibs4Support
+    )
+endif()
