--- a/kmlexport/tests/CMakeLists.txt
+++ b/kmlexport/tests/CMakeLists.txt
@@ -9,9 +9,15 @@ add_executable(test_kmlexport_gpxparsing
 )
 
 target_link_libraries(test_kmlexport_gpxparsing
-                      KF5::KDELibs4Support
                       Qt5::Test
                       Qt5::Gui
 )
+
+if(NOT ENABLE_PUREQT5)
+    target_link_libraries(test_kmlexport_gpxparsing
+                          PUBLIC
+                          KF5::KDELibs4Support
+    )
+endif()
 
 add_test(test_kmlexport_gpxparsing ${EXECUTABLE_OUTPUT_PATH}/test_kmlexport_gpxparsing)
