more option to be more pure Qt5

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -118,6 +118,7 @@ if(NOT ENABLE_PUREQT5)
 else()
     message(STATUS "Try to compile as pure Qt5")
     add_definitions(-DENABLE_PUREQT5)
+    add_definitions(-DQT_NO_URL_CAST_FROM_STRING -DQT_NO_CAST_FROM_ASCII -DQT_NO_CAST_TO_ASCII)
 endif()
 
 # Dependencies detection required by all plugins
