facebook: Remove dependency on KDELibs4Support

--- a/facebook/CMakeLists.txt
+++ b/facebook/CMakeLists.txt
@@ -25,6 +25,7 @@ target_link_libraries(kipiplugin_facebook
                       KF5::KExiv2
                       KF5::KDcraw
                       KF5::KIOCore
+                      KF5::WindowSystem
                      )
 
 configure_file(kipiplugin_facebook.desktop.cmake ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_facebook.desktop)
