--- a/imageshack/CMakeLists.txt
+++ b/imageshack/CMakeLists.txt
@@ -20,6 +20,7 @@ set(kipiplugin_imageshack_PART_SRCS
 add_library(kipiplugin_imageshack MODULE ${kipiplugin_imageshack_PART_SRCS})
 
 target_link_libraries(kipiplugin_imageshack
+                      PRIVATE
                       KF5::KDcraw
                       KF5::Kipi
                       KF5::KExiv2
