--- a/advancedslideshow/CMakeLists.txt
+++ b/advancedslideshow/CMakeLists.txt
@@ -50,6 +50,7 @@ ki18n_wrap_ui(kipiplugin_advancedslideshow_PART_SRCS
 add_library(kipiplugin_advancedslideshow MODULE ${kipiplugin_advancedslideshow_PART_SRCS})
 
 target_link_libraries(kipiplugin_advancedslideshow
+                      PRIVATE
                       KF5::Parts
 
                       Qt5::OpenGL
