--- a/piwigo/CMakeLists.txt
+++ b/piwigo/CMakeLists.txt
@@ -19,6 +19,7 @@ set(kipiplugin_piwigo_PART_SRCS
 add_library(kipiplugin_piwigo MODULE ${kipiplugin_piwigo_PART_SRCS})
 
 target_link_libraries(kipiplugin_piwigo
+                      PRIVATE
                       KF5::KDcraw
                       KF5::Kipi
                       KF5::KExiv2
