--- a/sendimages/CMakeLists.txt
+++ b/sendimages/CMakeLists.txt
@@ -29,6 +29,7 @@ target_link_libraries(kipiplugin_sendimages
 
 if(NOT ENABLE_PUREQT5)
     target_link_libraries(kipiplugin_sendimages
+                          PRIVATE
                           KF5::KDELibs4Support
     )
 endif()
